force-app/main/default/objects/KOGWebservice__c/KOGWebservice__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>KOGWebservice</label>
</CustomObject>