force-app/main/default/objects/KOGWebservice__c/fields/Context_Variable__c.field-meta.xml
<CustomField>
    <fullName>Context_Variable__c</fullName>
    <label>Context Variable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>