force-app/main/default/objects/KOGWebservice__c/fields/EndURL__c.field-meta.xml
<CustomField>
    <fullName>EndURL__c</fullName>
    <label>EndURL</label>
    <type>Url</type>
</CustomField>