force-app/main/default/objects/KOGWebservice__c/fields/KOG_Login_URL__c.field-meta.xml
<CustomField>
    <fullName>KOG_Login_URL__c</fullName>
    <label>KOG Login URL</label>
    <type>Url</type>
</CustomField>