force-app/main/default/objects/KOGWebservice__c/fields/KOG_Registration_URL__c.field-meta.xml
<CustomField>
    <fullName>KOG_Registration_URL__c</fullName>
    <label>KOG Registration URL</label>
    <type>Url</type>
</CustomField>