force-app/main/default/objects/KOGWebservice__c/fields/KogLogoutURL__c.field-meta.xml
<CustomField>
    <fullName>KogLogoutURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>KogLogoutURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>