force-app/main/default/objects/KOGWebservice__c/fields/PageURL__c.field-meta.xml
<CustomField>
    <fullName>PageURL__c</fullName>
    <label>Page URL</label>
    <type>Url</type>
</CustomField>