force-app/main/default/objects/KOGWebservice__c/fields/PageURLForFlow__c.field-meta.xml
<CustomField>
    <fullName>PageURLForFlow__c</fullName>
    <label>Page URL For Flow</label>
    <type>Url</type>
</CustomField>