force-app/main/default/objects/KOGWebservice__c/fields/RE_ApplicationName__c.field-meta.xml
<CustomField>
    <fullName>RE_ApplicationName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RE Application Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>